openshift-automation/day_2/kustomize/hello-world-k-env/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: OVERLAY_VALUE
  labels:
    argocd.argoproj.io/managed-by: openshift-gitops
  annotations:
    argocd.argoproj.io/sync-wave: "-1"
