openshift-automation/day_2/kustomize/hello-world-k-env/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: OVERLAY_VALUE
spec:
  ports:
  - port: 8080
  selector:
    app: OVERLAY_VALUE
